--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -20,14 +20,14 @@ jobs:
       uses: microsoft/powerplatform-actions/who-am-i@v0
       with:
         environment-url: 'https://org59b54fc5.crm.dynamics.com'
-        user-name: 'Akhilc@clango.com'
+        user-name: 'jliljegren@clango.com'
         password-secret: ${{ secrets.password }}
 
     - name: export-solution action
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
         environment-url: 'https://org59b54fc5.crm.dynamics.com'
-        user-name: 'Akhilc@clango.com'
+        user-name: 'jliljegren@clango.com'
         password-secret: ${{ secrets.password }}
         solution-name: FEA_Demo
         solution-output-file: out/exported/FEA_Demo.zip
