--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -4,36 +4,10 @@ name: export-and-branch-solution
 
 on:
   workflow_dispatch:
-    inputs:
-      # Change this value
-      solution_name:
-        description: 'name of the solution to worked on from Power Platform'
-        required: true
-        default: FEA_Demo
-       #Do Not change these values
-      solution_exported_folder:
-        description: 'folder name for staging the exported solution *do not change*'
-        required: true
-        default: out/exported/
-      solution_folder:
-        description: 'staging the unpacked solution folder before check-in *do not change*'
-        required: true
-        default: out/solutions/
-      solution_target_folder: 
-       description: 'folder name to be created and checked in *do not change*'
-       required: true
-       default: solutions/
-env:
-#edit your values here
-  ENVIRONMENT_URL: 'https://org59b54fc5.crm.dynamics.com/'
-  app_id: '2a156896-da32-40f4-9863-6614d4a08c0a'
-  CLIENT_ID: '5c51724c-caff-4399-a239-f6a0b1eaf570'
-  TENANT_ID: '4d109cf2-44d6-43f2-9087-9842fbc5483f'
 
 jobs:
   export-from-dev:
     runs-on: windows-latest
-    # or you can say runs-on: ubuntu-latest
     env:
       RUNNER_DEBUG: 1
 
@@ -43,36 +17,33 @@ jobs:
         lfs: true
 
     - name: who-am-i action
-      uses: microsoft/powerplatform-actions/who-am-i@0.4.0
+      uses: microsoft/powerplatform-actions/who-am-i@v0
       with:
-        environment-url: ${{env.ENVIRONMENT_URL}}
-        app-id: ${{env.app_id}}
-        client-secret: ${{ secrets.PowerPlatformSPN }}
-        tenant-id: ${{env.TENANT_ID}}
-
+        environment-url: 'https://org59b54fc5.crm.dynamics.com'
+        user-name: 'AkhilC@clango.com'
+        password-secret: ${{ secrets.password }}
 
     - name: export-solution action
-      uses: microsoft/powerplatform-actions/export-solution@0.4.0
+      uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        environment-url: ${{env.ENVIRONMENT_URL}}
-        app-id: ${{env.app_id}}
-        client-secret: ${{ secrets.PowerPlatformSPN }}
-        tenant-id: ${{env.TENANT_ID}}
-        solution-name: ${{ github.event.inputs.solution_name }}
-        solution-output-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
+        environment-url: 'https://org59b54fc5.crm.dynamics.com'
+        user-name: 'AkhilC@clango.com'
+        password-secret: ${{ secrets.password }}
+        solution-name: ALMLab
+        solution-output-file: out/exported/ALMLab.zip
 
     - name: unpack-solution action
-      uses: microsoft/powerplatform-actions/unpack-solution@0.4.0
+      uses: microsoft/powerplatform-actions/unpack-solution@v0
       with:
-        solution-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
-        solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
+        solution-file: out/exported/FEA_Demo.zip
+        solution-folder: out/solutions/FEA_Demo
         solution-type: 'Unmanaged'
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
       uses: microsoft/powerplatform-actions/branch-solution@v0
       with:
-        solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
-        solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }}
+        solution-folder: out/solutions/FEA_Demo
+        solution-target-folder: solutions/FEA_Demo
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         allow-empty-commit: true
