--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -20,7 +20,7 @@ jobs:
       uses: microsoft/powerplatform-actions/who-am-i@v0
       with:
         environment-url: 'https://org59b54fc5.crm.dynamics.com'
-        user-name: 'AkhilC@clango.com'
+        user-name: 'Akhilc@clango.com'
         password-secret: ${{ secrets.password }}
 
     - name: export-solution action
@@ -30,7 +30,7 @@ jobs:
         user-name: 'AkhilC@clango.com'
         password-secret: ${{ secrets.password }}
         solution-name: FEA_Demo
-        solution-output-file: out/exported/ALMLab.zip
+        solution-output-file: out/exported/FEA_Demo.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v0
