--- a/.github/workflows/release-solution-to-prod.yml
+++ b/.github/workflows/release-solution-to-prod.yml
@@ -32,7 +32,7 @@ jobs:
         environment-url: 'https://org6ee66eda.crm.dynamics.com'
         user-name: 'Akhilc@clango.com'
         password-secret: ${{ secrets.password }}
-        solution-file: out/solutions/ALMLab.zip
+        solution-file: out/solutions/FEA_Demo.zip
         force-overwrite: true
         publish-changes: true
 
@@ -44,7 +44,7 @@ jobs:
         password-secret: ${{ secrets.password }}
         solution-name: FEA_Demo
         managed: true
-        solution-output-file: out/ship/ALMLab.zip
+        solution-output-file: out/ship/FEA_Demo.zip
 
     - name: Upload the ready to ship solution to GH artifact store
       uses: actions/upload-artifact@v2
@@ -77,6 +77,6 @@ jobs:
         environment-url: 'https://org38b60082.crm.dynamics.com/'
         user-name: 'Akhilc@clango.com'
         password-secret: ${{ secrets.password }}
-        solution-file: out/release/ALMLab.zip
+        solution-file: out/release/FEA_Demo.zip
         force-overwrite: true
         publish-changes: true
