--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -29,21 +29,21 @@ jobs:
         environment-url: 'https://org59b54fc5.crm.dynamics.com'
         user-name: 'Akhilc@clango.com'
         password-secret: ${{ secrets.password }}
-        solution-name: FEA_Demo
-        solution-output-file: out/exported/FEA_Demo.zip
+        solution-name: FEA
+        solution-output-file: out/exported/FEA.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v0
       with:
-        solution-file: out/exported/FEA_Demo.zip
-        solution-folder: out/solutions/FEA_Demo
+        solution-file: out/exported/FEA.zip
+        solution-folder: out/solutions/FEA
         solution-type: 'Unmanaged'
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
       uses: microsoft/powerplatform-actions/branch-solution@v0
       with:
-        solution-folder: out/solutions/FEA_Demo
-        solution-target-folder: solutions/FEA_Demo
+        solution-folder: out/solutions/FEA
+        solution-target-folder: solutions/FEA
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         allow-empty-commit: true
