--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -19,14 +19,14 @@ jobs:
     - name: who-am-i action
       uses: microsoft/powerplatform-actions/who-am-i@v0
       with:
-        environment-url: 'https://org59b54fc5.crm.dynamics.com'
+        environment-url: 'https://org59b54fc5.crm.dynamics.com/'
         user-name: 'Akhilc@clango.com'
         password-secret: ${{ secrets.password }}
 
     - name: export-solution action
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        environment-url: 'https://org59b54fc5.crm.dynamics.com'
+        environment-url: 'https://org59b54fc5.crm.dynamics.com/'
         user-name: 'Akhilc@clango.com'
         password-secret: ${{ secrets.password }}
         solution-name: FEA
